Fix tags not wrapping

--- a/src/scss/base/_elements.scss
+++ b/src/scss/base/_elements.scss
@@ -14,8 +14,8 @@ img {
 }
 
 a {
-  position: relative;
-  display: inline-block;
+  // position: relative;
+  // display: inline-block;
   padding: 0;
   color: $color__theme;
   text-decoration: none;
